@@ -1499,6 +1499,14 @@ operator|.
 name|clear
 argument_list|()
 expr_stmt|;
+comment|// make each test create a fresh user to avoid leaking tokens between tests
+name|UserGroupInformation
+operator|.
+name|setLoginUser
+argument_list|(
+literal|null
+argument_list|)
+expr_stmt|;
 block|}
 annotation|@
 name|After
@@ -10220,19 +10228,6 @@ operator|.
 name|getApplicationAttemptId
 argument_list|()
 decl_stmt|;
-name|UserGroupInformation
-name|ugi
-init|=
-name|UserGroupInformation
-operator|.
-name|createRemoteUser
-argument_list|(
-name|attemptId
-operator|.
-name|toString
-argument_list|()
-argument_list|)
-decl_stmt|;
 name|Token
 argument_list|<
 name|AMRMTokenIdentifier
@@ -10265,6 +10260,14 @@ argument_list|()
 decl_stmt|;
 try|try
 block|{
+name|UserGroupInformation
+name|ugi
+init|=
+name|UserGroupInformation
+operator|.
+name|getCurrentUser
+argument_list|()
+decl_stmt|;
 name|ugi
 operator|.
 name|addTokenIdentifier
@@ -10290,13 +10293,6 @@ name|e
 argument_list|)
 throw|;
 block|}
-name|UserGroupInformation
-operator|.
-name|setLoginUser
-argument_list|(
-name|ugi
-argument_list|)
-expr_stmt|;
 name|super
 operator|.
 name|register
